--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "animate.css": "^4.1.1",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
     "cors": "^2.8.5",
     "expres": "^0.0.5",
+    "framer-motion": "^10.16.16",
     "nodemailer": "^6.9.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
